# Tychra

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  version.py
.github/workflows/: release.yml
providers/: __init__.py  crypto.py  market.py
src/: chart_generator.py  client.py  commands.py  config_manager.py  scheduler.py  updater.py
